# breast-cancer-pipeline

./: .gitignore  README.md  keywords.csv  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: weekly-pipeline.yml
agents/: agent1_scraper.py  agent2_summarizer.py  agent3_categorizer.py  agent4_question_gen.py  agent5_publisher.py
data/: keywords.csv  pharma_news.db  pharma_urls.csv  urls.csv
src/mslworkingv1/: crew.py  main.py
