[project]
name = "mslworkingv1"
version = "0.1.0"
description = "mslworkingv1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
mslworkingv1 = "mslworkingv1.main:run"
run_crew = "mslworkingv1.main:run"
train = "mslworkingv1.main:train"
replay = "mslworkingv1.main:replay"
test = "mslworkingv1.main:test"
run_with_trigger = "mslworkingv1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
